@@ -7,6 +7,7 @@
   * Page#form is changed to Page#form_with
   * Mechanize#get takes custom http headers.  Thanks Mike Dalessio!
   * Form#click_button submits a form defaulting to the current button.
+  * Form#set_fields now takes a hash.  Thanks Tobi!
 
 * Bug Fixes:
   * Added more examples.  Thanks Robert Jackson.
